fixing error with the token part by adding a sécurity bearer en generating a new correctly
