# pkg/models/authentication.go
@@ -5,20 +5,6 @@ import (
 	"net/http"
 )
 
-type LoginRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
-}
-
-func (a *LoginRequest) Bind(r *http.Request) error {
-	if a.Email == "" {
-		return errors.New("email must not be null")
-	} else if a.Password == "" {
-		return errors.New("password must not be null")
-	}
-	return nil
-}
-
 type TokenRequest struct {
 	RefreshToken string `json:"refresh_token"`
 }
@@ -33,4 +19,5 @@ func (t *TokenRequest) Bind(r *http.Request) error {
 type TokenResponse struct {
 	AccessToken  string `json:"access_token"`
 	RefreshToken string `json:"refresh_token"`
+	TokenType    string `json:"token_type"`
 }
